--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -8,6 +8,7 @@
         <ul>
             <li><a href="/home">Home</a></li>
             <li><a href="/blog">Blog</a></li>
+            <li><a href="/cgtaxcalc">CGT Tax Calc</a></li>
             <li>About</li>
         </ul>
 
