setup admin-only form to create new posts

--- a/src/templates/blog.html
+++ b/src/templates/blog.html
@@ -3,6 +3,8 @@
 {% block content %}
     <h1>Bob's Blog Posts</h1>
     <p>
-        Still building this lol, thanks for coming though.
+        Thanks for sparing the time to dive into my attempts at winning life. Maybe you'll find something useful for yourself?
     </p>
+    <p>Admin controls: <a href="/blog/new" class="btn btn-primary">New Blog Post</a></p>
+    <ol>
 {% endblock %}
