how to get css working

--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,7 +1,19 @@
-<h2> Functional navbar </h2>
-<ul>
-    <li><a href="/home">Home</a></li>
-    <li><a href="/blog">Blog</a></li>
-    <li><a href="/cgtaxcalc">CGT Tax Calc</a></li>
-    <li>About</li>
-</ul>
+<div class="wrapper">
+    <nav class="sidebar">
+
+        <!-- Close sidebar menu -->
+        <div class="dismiss">
+        <i class="fas fa-arrow-left"></i>
+        </div>
+
+        <div class="sidebar-header">
+            <h3>Sidebar nav</h3>
+        </div>
+        <ul class="list-unstyled menu-elements">
+            <li><a href="/home">Home</a></li>
+            <li class="active"><a href="/blog">Blog</a></li>
+            <li><a href="/cgtaxcalc">CGT Tax Calc</a></li>
+            <li>About</li>
+        </ul>
+    </nav>
+</div>
